Fixed problems with button spacing and added pull classes.

--- a/styl/buttons.styl
+++ b/styl/buttons.styl
@@ -4,10 +4,14 @@
   border: none
   cursor: pointer
   outline: none
+  margin: 3px 0
   padding: 10px 12px
   
   &:hover
     background-color: darken(#DDD, 10%)
+    
+  & + [class*='btn']
+    margin-left: 5px
   
   for color in colors
     &.btn-{color}
