--- a/styl/columns.styl
+++ b/styl/columns.styl
@@ -3,7 +3,7 @@ for screen-size in screen-sizes
   
   // set gutters for all required containers
   [class*=\'{screen-size}-\']
-    background-color: #FFF
+    background-color: rgba(255,255,255,0.75)
     float: left
     margin: 10px gutter 0 gutter
     min-height: 5px
